--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
+image: images/tea-logo.png
 ---
 
 Welcome to the best blog I ever made.
