--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ search_exclude: true
 image: images/tea-logo.png
 ---
 
-Welcome to the best blog I ever made.
+## Welcome to the <span style="color:aquamarine; font: size 20px;">**BEST!**</span> blog I ever made.
 
-
-
+Code I made!:
+![](/images/code-image.png "Code I made")
 
 
 # Posts
