deploy: e9c9af20114926d5e26a87678fe04faba8822f70

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Welcome to the best blog I ever made.</p>
+        <div class="home"><h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:aquamarine; font: size 20px;"><strong>BEST!</strong></span> blog I ever made.</h2>
+
+<p>Code I made!:
+<img src="/images/code-image.png" alt="" title="Code I made" /></p>
 
 <h1 id="posts">Posts</h1>
 
