--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ image: images/tea-logo.png
 
 ## Welcome to the <span style="color:aquamarine; font: size 20px;">**BEST!**</span> blog I ever made.
 
-Code I made!:
-![](/images/code-image.png "Code I made")
+Code I made!
+![]({{ site.baseurl }}/images/code-image.png "Code I made")
 
 
 # Posts
