deploy: 60f98f10c3fb00f7e43c12e33b99ceadadcfd56a

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:aquamarine; font: size 20px;"><strong>BEST!</strong></span> blog I ever made.</h2>
 
-<p>Code I made!:
-<img src="/images/code-image.png" alt="" title="Code I made" /></p>
+<p>Code I made!
+<img src="/blog/images/code-image.png" alt="" title="Code I made" /></p>
 
 <h1 id="posts">Posts</h1>
 
