--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@ search_exclude: true
 image: images/tea-logo.png
 ---
 
-## Welcome to the <span style="color:aquamarine; font: size 25px;">**BEST!**</span> blog I ever made.
+## Welcome to the <span style="color:aquamarine; font: size 20px;">**BEST!**</span> blog I ever made.
 
-Code I made!
-![]({{ site.baseurl }}/images/code-image.png "Code I made")
-
+Notes Page: [Notes](https://dashpen.github.io/blog/notes/)
+Vocab Page: [Vocab](https://dashpen.github.io/blog/vocab/)
 
 # Posts
