--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:aquamarine; font: size 25px;"><strong>BEST!</strong></span> blog I ever made.</h2>
+        <div class="home"><h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:aquamarine; font: size 20px;"><strong>BEST!</strong></span> blog I ever made.</h2>
 
-<p>Code I made!
-<img src="/blog/images/code-image.png" alt="" title="Code I made" /></p>
+<p>Notes Page: <a href="https://dashpen.github.io/blog/notes/">Notes</a>
+Vocab Page: <a href="https://dashpen.github.io/blog/vocab/">Vocab</a></p>
 
 <h1 id="posts">Posts</h1>
 
