deploy: dd5547c70441e777ad7790a53fa714b832bb820c

--- a/vocab/index.html
+++ b/vocab/index.html
@@ -83,16 +83,16 @@ window.onload = wrap_img;
 <table>
   <thead>
     <tr>
-      <th> </th>
-      <th> </th>
-      <th> </th>
+      <th>Name</th>
+      <th>Syntax</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td> </td>
-      <td> </td>
-      <td> </td>
+      <td>Variable</td>
+      <td>variableName = value</td>
+      <td>Very simple compared to other languages; Don’t need to worry about variable types</td>
     </tr>
     <tr>
       <td> </td>
@@ -107,18 +107,24 @@ window.onload = wrap_img;
 <table>
   <thead>
     <tr>
-      <th> </th>
+      <th>Name</th>
+      <th>Syntax</th>
+      <th>Description</th>
       <th> </th>
       <th> </th>
     </tr>
   </thead>
   <tbody>
     <tr>
+      <td>&lt;!–</td>
+      <td>if</td>
+      <td>if[[]]</td>
       <td> </td>
-      <td> </td>
-      <td> </td>
+      <td>–&gt;</td>
     </tr>
     <tr>
+      <td> </td>
+      <td> </td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -126,14 +132,19 @@ window.onload = wrap_img;
   </tbody>
 </table>
 
-<h2 id="html-sytnax">HTML sytnax</h2>
+<h2 id="bash-syntax">Bash syntax</h2>
+<p>|Name|Syntax|Description|
+|—|—|—|
+|   |   |   |
+|   |   |   |</p>
+<h2 id="html-syntax">HTML syntax</h2>
 
 <table>
   <thead>
     <tr>
-      <th> </th>
-      <th> </th>
-      <th> </th>
+      <th>Name</th>
+      <th>Syntax</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
