--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@ layout: home
 search_exclude: true
 image: images/tea-logo.png
 ---
+<style>
+body {
+    background-image: url('{{site.baseurl}}/images/light-gradient.png');
+    /* background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover; */
+}
+</style>
 
-## Welcome to the <span style="color:aquamarine; font: size 20px;">**BEST!**</span> blog I ever made.
+## Welcome to the <span style="color:green; font: size 20px;">**BEST!**</span> blog I ever made.
 
 Notes Page: [Notes](https://dashpen.github.io/blog/notes/)
 
