--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:aquamarine; font: size 20px;"><strong>BEST!</strong></span> blog I ever made.</h2>
+        <div class="home"><style>
+body {
+    background-image: url('/blog/images/light-gradient.png');
+    /* background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover; */
+}
+</style>
+
+<h2 id="welcome-to-the-best-blog-i-ever-made">Welcome to the <span style="color:green; font: size 20px;"><strong>BEST!</strong></span> blog I ever made.</h2>
 
 <p>Notes Page: <a href="https://dashpen.github.io/blog/notes/">Notes</a></p>
 
