--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@ layout: home
 search_exclude: true
 image: images/tea-logo.png
 ---
+
 <style>
 body {
     background-image: url('{{site.baseurl}}/images/light-gradient.png');
-    /* background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover; */
+    background-size: cover;
 }
 </style>
 
