--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/tea-logo.png
 
 <style>
 body {
-    background-image: url('{{site.baseurl}}/images/light-gradient.png');
+    background-image: url('https://dashpen.github.io/blog/images/light-gradient.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
