--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ window.onload = wrap_img;
         <div class="home"><style>
 body {
     background-image: url('/blog/images/light-gradient.png');
-    /* background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover; */
+    background-size: cover;
 }
 </style>
 
