--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><style>
 body {
-    background-image: url('/blog/images/light-gradient.png');
+    background-image: url('https://dashpen.github.io/blog/images/light-gradient.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
