--- a/notes/index.html
+++ b/notes/index.html
@@ -84,8 +84,45 @@ window.onload = wrap_img;
 <p>You can use HTML elements in markdown! Pretty interesting and useful.</p>
 
 <h2 id="python">Python</h2>
-<p>When writing if or for statements, you really want to be conscious of spaces, as there aren’t any brackets for code</p>
-<h2 id="bash">Bash</h2>
+<p>When writing if or for statements, you really want to be conscious of spaces, as there aren’t any brackets for code
+\n is newline, \t is tab (has to be in string)
+commas in a print makes a space</p>
+
+<ul>
+  <li>Lists
+    <ul>
+      <li>Can store many of one type of variables</li>
+      <li>Can use .append(variable) to add new values
+        <ul>
+          <li>When used with something called InfoDb, you can add a string key to a string to characterize something</li>
+        </ul>
+      </li>
+      <li>First thing in a list is 0
+        <ul>
+          <li>Called an index</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+  <li>Dictionaries
+    <ul>
+      <li>Have keys and values, unlike lists</li>
+    </ul>
+  </li>
+  <li>For loop
+    <ul>
+      <li>can do “for ‘variable’ in ‘list’” then use variable</li>
+      <li>can also do “for ‘variable’ in range(number)” for loops like java</li>
+    </ul>
+  </li>
+  <li>While loops
+    <ul>
+      <li>while(true) is based!
+        <h2 id="bash">Bash</h2>
+      </li>
+    </ul>
+  </li>
+</ul>
 
 <h2 id="jupyter">Jupyter</h2>
 
