new image on site

--- a/index.html
+++ b/index.html
@@ -19,4 +19,8 @@ Notes Page: [Notes](https://dashpen.github.io/blog/notes/)
 
 Vocab Page: [Vocab](https://dashpen.github.io/blog/vocab/)
 
+This is <span style="color:orange; font: size 40px;">**not**</span> a broken image!
+<br>
+<img src="images/broken-image.png" alt="Your Mom!">
+
 # Posts
