--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@ body {
 
 <p>Vocab Page: <a href="https://dashpen.github.io/blog/vocab/">Vocab</a></p>
 
+<p>This is <span style="color:orange; font: size 40px;"><strong>not</strong></span> a broken image!
+<br />
+<img src="images/broken-image.png" alt="Your Mom!" /></p>
+
 <h1 id="posts">Posts</h1>
 
 
