home page changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,46 @@ Vocab Page: [Vocab](https://dashpen.github.io/blog/vocab/)
 
 This is <span style="color:orange; font: size 40px;">**not**</span> a broken image!
 <br>
-<img src="images/broken-image.png" alt="Your Mom!">
+<img src="images/broken-image.png" alt="Your Mom!"
+        width="50"
+        height="50"/>
+<br>
+<table>
+    <tr>
+     <th>Week 0</th>
+     <th>Week 1</th>
+     <th>Week 2</th>
+     <th>Week 3</th>
+    </tr>
+
+    <tr>
+        <td>
+            Work Done: 100
+        </td>
+        <td>
+            Work Done: 1000
+        </td>
+        <td>
+            Work Done: 10000
+        </td>
+        <td>
+            Work Done: 100000
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+            Tasks Completed: 2
+        </td>
+        <td>
+            Tasks Completed: 4
+        </td>
+        <td>
+            Tasks Completed: 8
+        </td>
+        <td>
+            Tasks Completed: 16
+        </td>
+    </tr>
 
 # Posts
