home page changes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ search_exclude: true
 image: images/tea-logo.png
 ---
 
-<style>
+<!-- <style>
 body {
     background-image: url('https://dashpen.github.io/blog/images/light-gradient.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
-</style>
+</style> -->
 
 ## Welcome to the <span style="color:green; font: size 20px;">**BEST!**</span> blog I ever made.
 
@@ -22,8 +22,8 @@ Vocab Page: [Vocab](https://dashpen.github.io/blog/vocab/)
 This is <span style="color:orange; font: size 40px;">**not**</span> a broken image!
 <br>
 <img src="images/broken-image.png" alt="Your Mom!"
-        width="50"
-        height="50"/>
+        width="16"
+        height="16"/>
 <br>
 <table>
     <tr>
@@ -63,4 +63,6 @@ This is <span style="color:orange; font: size 40px;">**not**</span> a broken ima
         </td>
     </tr>
 
-# Posts
+<br>
+
+<!-- # Posts -->
