deploy: 82d759c489d1cc960227ed820d38d711d3951714

--- a/notes/index.html
+++ b/notes/index.html
@@ -128,6 +128,27 @@ commas in a print makes a space</p>
 
 <h2 id="html">HTML</h2>
 
+<h2 id="college-stuff">College Stuff</h2>
+<p><br /></p>
+
+<ul>
+  <li>Students are overwhelmed so they don’t do what they want to.
+    <ul>
+      <li>No sleep = good</li>
+    </ul>
+  </li>
+  <li>Awful stats!
+    <ul>
+      <li>40% experience more stressed</li>
+      <li>more than a third “too depressed to function”</li>
+      <li>over 60% anxiety</li>
+      <li>over 60% ‘very lonely’</li>
+      <li>over 60% overwhelmed</li>
+    </ul>
+  </li>
+  <li>Making life happier takes work</li>
+  <li>A line of text</li>
+</ul>
 
   </div>
 
