--- a/_posts/2022-09-22-Blackjack.html
+++ b/_posts/2022-09-22-Blackjack.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /TheBestPage/
-title: The Best Page
+permalink: /Blackjack/
+title: Blackjack
 ---
 
 {% include BestPageTable.html %}
