--- a/TheBestPage/index.html
+++ b/TheBestPage/index.html
@@ -85,20 +85,9 @@ window.onload = wrap_img;
 <table>
     <tr>
         <td><img src="/blog//images/favicon.ico" height="60" title="" alt="" /></td>
-        <td><a href="/blog/frontend/overview">Overview</a></td>
-        <td><a href="/blog/frontend/tutorial">Tutorial</a></td>
-        <td><a href="/blog/frontend/calculator">Calculator</a></td>
-        <td><a href="/blog/frontend/binary">Binary</a></td>
-        <td><a href="/blog/frontend/grades">Grades</a></td>
-        <td><a href="/blog/frontend/graph">Graph</a></td>
-        <td><a href="/blog/frontend/life">Life</a></td>
-        <td><a href="/blog/frontend/snake">Snake</a></td>
+        <td><a href="/blog/Blackjack">Blackjack</a></td>
     </tr>
 </table>
-
-<!-- <div>
-    <img src="/images/CircleRed.png" id="circle" alt="hello"/>
-</div> -->
 
   </div>
 
