--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -149,6 +149,12 @@ window.onload = wrap_img;
                 document.getElementById("start").onclick = function(){
                     playerCards = [];
                     dealerCards = [];
+                    document.getElementById("lose").style.visibility = "hidden";
+                    document.getElementById("win").style.visibility = "hidden";
+                    document.getElementById("Dealer").innerHTML = "Dealer's cards are ??";
+                    document.getElementById("Player").innerHTML = "Your cards are ??";
+                    document.getElementById("DealerScore").innerHTML = "The Dealer's score is: ??";
+                    document.getElementById("PlayerScore").innerHTML = "Your score is: ??"
                     document.getElementById("Dealer").innerHTML = 
                     "Dealer's cards are " + RandCard(false) + " | " + RandCard(false);
                     playerDisplay = "Your cards are " + RandCard(true) + " | " + RandCard(true);
@@ -163,13 +169,6 @@ window.onload = wrap_img;
                     if(CalculateScore(true) > 28){
                         document.getElementById("lose").style.visibility = "visible";
                     } 
-                    // else if (CalculateScore(true) > CalculateScore(false)){
-                    //     document.getElementById("Dealer").innerHTML += " | " + RandCard(false);
-                    //     document.getElementById("DealerScore").innerHTML = "The Dealer's Score is: " + CalculateScore(false);
-                    //     if (CalculateScore(false) > 28){
-                    //         document.getElementById("win").style.visibility = "visible";
-                    //     }
-                    // }
                     if(CalculateScore(true) == 28){
                         document.getElementById("win").style.visibility = "visible";
                     }
