--- a/_posts/2022-09-22-Blackjack.html
+++ b/_posts/2022-09-22-Blackjack.html
@@ -18,6 +18,10 @@ title: Blackjack
 <body>
 <div class="myDiv">
     <p id="Dealer">Dealer's cards are ??</p>
+    <div class="row">
+        <div id="cardArray">
+        </div>
+      </div>
     <div>
         <p id="Player">Your cards are ??</p>
         <p id="DealerScore">The Dealer's score is: ??</p>
@@ -29,20 +33,25 @@ title: Blackjack
             <img id="win" style="visibility: hidden;" src="https://dashpen.github.io/blog/images/win.png"/>
             <img id="lose" style="visibility: hidden;" src="https://dashpen.github.io/blog/images/lose.png"/>
             <img id="push"style="visibility: hidden;" src="https://dashpen.github.io/blog/images/push.png"/>
+            <img id="club1" src="/blog/images/cards/clubs_ace.png"/>
             <script>
                 var Cards = ["Ace", 2, 3, 4, 5, 6, 7, 8, 9, 10, "Jack", "Queen", "King"];
+                const cardImages = ["clubs_ace", "clubs_2", "clubs_3", "clubs_4", "clubs_5", "clubs_6", "clubs_7","clubs_8", "clubs_9", "clubs_10", "clubs_jack", "clubs_queen", "clubs_king", 
+                                    'diamond_ace', 'diamond_2', 'diamond_3', 'diamond_4', 'diamond_5', 'diamond_6', 'diamond_7', 'diamond_8', 'diamond_9', 'diamond_10', 'diamond_jack', 'diamond_queen', 'diamond_king', 
+                                    'hearts_ace', 'hearts_2', 'hearts_3', 'hearts_4', 'hearts_5', 'hearts_6', 'hearts_7', 'hearts_8', 'hearts_9', 'hearts_10', 'hearts_jack', 'hearts_queen', 'hearts_king', 
+                                    'spades_ace', 'spades_2', 'spades_3', 'spades_4', 'spades_5', 'spades_6', 'spades_7', 'spades_8', 'spades_9', 'spades_10', 'spades_jack', 'spades_queen', 'spades_king'];
+                var cardsPicked = [];
                 var rand = (Math.random() * 12);
                 var rand2 = (Math.random() * 12);
                 var winScore = 21;
                 var isPlayerOver = false;
                 var isDealerOver = false;
-                var playerScore;
-                var dealerScore;
                 var playerCards = [];
                 var dealerCards = [];
                 var playerAces = [];
                 var dealerAces = [];
                 var playerDisplay = "Your Cards Are ??";
+
                 // Generates a random card and returns it as a string
                 function RandCard(isP){
                     let randNumber = Math.round(Math.random() * 12);
@@ -72,6 +81,35 @@ title: Blackjack
                     return Cards[randNumber];
                 }
 
+                function revealCard(card){
+                    var temp = '<div class="column"> <img src="/blog/images/cards/'+ cardImages[card] + '.png" alt="card" style="size: 100%;"> </div>';
+                    console.log(temp);
+                    document.getElementById("cardArray").innerHTML += temp;
+                    var thit = [];
+                    for(var i = 1; i <=13; i++){
+                        var key = "ace";
+                        if(i == 1){
+                            key = "ace";
+                        }
+                        else if(i == 11){
+                            key = "jack";
+                        }
+                        else if(i == 12){
+                            key = "queen";
+                        }
+                        else if(i == 13){
+                            key = "king";
+                        } else{
+                            key = i;
+                        }
+                        thit.push("spades_" + key);
+                    
+                    }
+                    console.log(cardImages)
+
+                }
+
+
                 function CalculateScore(isP){
                     let sum = 0;
                     if (isP == true){
@@ -99,6 +137,7 @@ title: Blackjack
                 }
 
                 document.getElementById("start").onclick = function(){
+                    revealCard(1);
                     playerCards = [];
                     dealerCards = [];
                     playerAces = [];
@@ -150,7 +189,10 @@ title: Blackjack
                 document.getElementById("stand").onclick = function(){
                     let gameEnd = false;
                     while(gameEnd == false){
-                        if (CalculateScore(false) == CalculateScore(true)){
+                        if (CalculateScore(false) > CalculateScore(true)){   
+                            document.getElementById("lose").style.visibility = "visible";
+                            gameEnd = true;
+                        } else if (CalculateScore(false) == CalculateScore(true)){
                             document.getElementById("push").style.visibility = "visible";
                             gameEnd = true;
                         } else {
