--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -97,6 +97,17 @@ window.onload = wrap_img;
 .myDiv {
     margin:100px
 }
+.column {
+  float: left;
+  /* width: 20%; */
+  display: flex;
+  /* padding: 5px; */
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 </style>
 <head>
     HELLO
@@ -136,16 +147,18 @@ window.onload = wrap_img;
                 var dealerCards = [];
                 var playerAces = [];
                 var dealerAces = [];
-                var playerDisplay = "Your Cards Are ??";
 
                 // Generates a random card and returns it as a string
                 function RandCard(isP){
                     let randNumber = Math.round(Math.random() * 12);
+                    // Checks if you are making a card for the dealer or the player
                     if(isP == true){
+                        // If the random card is an ace it will add 11 to the score and the option to have only 1 instead
                         if(randNumber == 0){
                             playerCards.push(11);
                             playerAces.push(-10);
                         }
+                        // If the card is Jack, Queen or king, it will add only 10 to score
                         else if(randNumber >= 9){
                             playerCards.push(10);
                         }
@@ -166,9 +179,9 @@ window.onload = wrap_img;
                     }
                     return Cards[randNumber];
                 }
-
+                // Function called every time you want an image of the card to show
                 function revealCard(card){
-                    var temp = '<div class="column"> <img src="/blog/images/cards/'+ cardImages[card] + '.png" alt="card" style="size: 100%;"> </div>';
+                    var temp = '<div class="column"> <img src="/blog/images/cards/'+ cardImages[card] + '.png" alt="card" style="size: 10%;"> </div>';
                     console.log(temp);
                     document.getElementById("cardArray").innerHTML += temp;
                     // var thit = [];
@@ -195,14 +208,15 @@ window.onload = wrap_img;
 
                 }
 
-
+                // Returns the score of the player or dealer
                 function CalculateScore(isP){
                     let sum = 0;
+                    // Checks if player or dealer is being checked
                     if (isP == true){
                         playerCards.forEach(function myFunction(element) {
                             sum += element;
                         });
-
+                        // If the player is over 21 score, it will make all aces 1 instead of 11
                         if (isPlayerOver){
                                 playerAces.forEach(function myFunction(element){
                                     sum += element
@@ -222,6 +236,7 @@ window.onload = wrap_img;
                     return sum;
                 }
 
+                // Initialization of the game and resetting of the scores
                 document.getElementById("start").onclick = function(){
                     // revealCard(1);
                     playerCards = [];
@@ -234,10 +249,7 @@ window.onload = wrap_img;
                     document.getElementById("lose").style.visibility = "hidden";
                     document.getElementById("win").style.visibility = "hidden";
                     document.getElementById("push").style.visibility = "hidden";
-                    // document.getElementById("Dealer").innerHTML = "Dealer's cards are ??";
-                    // document.getElementById("Player").innerHTML = "Your cards are ??";
-                    // document.getElementById("DealerScore").innerHTML = "The Dealer's score is: ??";
-                    // document.getElementById("PlayerScore").innerHTML = "Your score is: ??"
+
                     document.getElementById("Dealer").innerHTML = "Dealer's cards are " + RandCard(false) + " | " + RandCard(false);
                     document.getElementById("Player").innerHTML = "Your cards are " + RandCard(true) + " | " + RandCard(true);
                     document.getElementById("DealerScore").innerHTML = "The Dealer's Score is: " + CalculateScore(false);
@@ -253,6 +265,8 @@ window.onload = wrap_img;
                         document.getElementById("lose").style.visibility = "visible";
                     }
                 }
+
+                // Adds score to the player and checks if the player has won or lost if they are over or equal to the winscore
                 document.getElementById("hit").onclick = function(){
 
                     document.getElementById("Player").innerHTML += " | " + RandCard(true);
@@ -272,22 +286,28 @@ window.onload = wrap_img;
                         document.getElementById("win").style.visibility = "visible";
                     }
                 }
+
+                // Checks if the player has won the game and runs through the dealer's cards
                 document.getElementById("stand").onclick = function(){
                     let gameEnd = false;
                     while(gameEnd == false){
+
                         if (CalculateScore(false) > CalculateScore(true)){   
                             document.getElementById("lose").style.visibility = "visible";
                             gameEnd = true;
+
                         } else if (CalculateScore(false) == CalculateScore(true)){
                             document.getElementById("push").style.visibility = "visible";
                             gameEnd = true;
+
                         } else {
                             document.getElementById("Dealer").innerHTML += " | " + RandCard(false);
-                            document.getElementById("DealerScore").innerHTML = "The Dealer's Score is: " + CalculateScore(false);
+                            document.getElementById("DealerScore").innerHTML = "The Dealer's Score is: " + CalculateScore(false);4
+
                             if (CalculateScore(false) > winScore){
                                 document.getElementById("win").style.visibility = "visible";
                                 gameEnd = true;
-                                continue;
+
                             } else if (CalculateScore(false) > CalculateScore(true)){
                                 document.getElementById("lose").style.visibility = "visible";
                                 gameEnd = true;
