--- a/_posts/2022-10-19-API-Table.html
+++ b/_posts/2022-10-19-API-Table.html
@@ -11,7 +11,7 @@ title: API Table
             <p id="text">Clicked Times = </p>
             <script>
                 document.getElementById("club1").onclick = function(){
-                    const url = "https://swag.nighthawkcodingteams.cf/api";
+                    const url = "https://swag.nighthawkcodingteams.cf/api/test";
                     const options = {
                         method: 'GET',
                         mode: 'cors',
