--- a/APITable/index.html
+++ b/APITable/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
             <p id="text">Clicked Times = </p>
             <script>
                 document.getElementById("club1").onclick = function(){
-                    const url = "https://swag.nighthawkcodingteams.cf/api";
+                    const url = "https://swag.nighthawkcodingteams.cf/api/test";
                     const options = {
                         method: 'GET',
                         mode: 'cors',
