--- a/jupyter/libraries.html
+++ b/jupyter/libraries.html
@@ -664,7 +664,7 @@ billy in position 20
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/blog/feed.xml">
+          <a href="https://dashpen.github.io/blog/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/blog/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
