--- a/notes/index.html
+++ b/notes/index.html
@@ -163,7 +163,7 @@ commas in a print makes a space</p>
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/blog/feed.xml">
+          <a href="https://dashpen.github.io/blog/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/blog/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
